cmake_minimum_required(VERSION 4.1)
project(practice C)

set(CMAKE_C_STANDARD 11)

add_executable(practice aa_printf.c
        ab_name_and_address.c
        ac_ages_or_days.c
        ad_for_he's_a_jolly_good_fellow.c
        ae_antion.c
        af_tose.c
        ag_smile.c
        ah_one_two_three.c)
